# memento

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  Dockerfile  Makefile  PLAN.md  README.md  compose.example.yaml  package.json  playwright.config.ts  pyproject.toml
.agents/skills/memento/: SKILL.md
.github/copilot-instructions/: python.instructions.md
.github/copilot-instructions/python/: SKILL.md
.github/workflows/: ci.yml  release.yml
deploy/: diskstation.compose.env.example  diskstation.compose.yaml  diskstation.config.example.json  diskstation.env.example
deploy/nginx/: memento.conf
deploy/systemd/: memento-audit.service  memento-audit.timer  memento-backup.service  memento-backup.timer  memento.service
docs/: attribution.md  contracts.md  diagrams.md  diskstation.md  graph-explorer-plan.md  implementation.md  load-testing.md  migration.md  needle-fine-tuning.md  needle-performance.md  operations.md  release.md  rollback.md  semantic-search.md  setup-codex.md  setup-pi.md  setup-piclaw.md  threat-model.md
docs/decisions/: 0001-keep-operation-worktrees.md  0002-needle-feasibility.md  0003-separate-knowledge-control-and-derived-state.md  0004-use-proposals-for-shared-writes.md  0005-use-umcp-streamable-http.md  0006-keep-lexical-search-primary.md  0007-attach-generic-versioned-assets.md  0008-build-for-baseline-cpus.md  0009-run-gte-in-batched-short-lived-workers.md  0010-use-tiled-matrix-kernels-for-local-inference.md  0011-embed-a-gated-visual-memory-debugger.md  README.md
docs/evidence/: README.md  diskstation-memory-benchmark-2026-07-19.json  load-http-local.json  load-operational-local.json  load-semantic-local.json
docs/evidence/graph/: diskstation-live.json  performance-2000.json
docs/evidence/needle/: README.md  SHA256SUMS  base-routing-amd64.json  finetune-corpus-manifest.json  finetune-training-summary.json  finetuned-original-holdout-amd64.json  finetuned-unseen-holdout-amd64.json  memento-router-ndl1.json  router-v2-heldout-amd64.json  router-v2-manifest.json  router-v2-training-summary.json  rust-router-amd64.json  rust-router-single-core-i7-12700.json
examples/: config.v1.json  memento.env.example
models/gte/: README.md  gte-small.gtemodel
models/needle/: README.md  memento-router.ndl  memento-router.pkl  needle.model  needle.vocab  test.jsonl  train-hard.jsonl  train.jsonl  val.jsonl
rust/: Cargo.toml  Makefile  README.md
rust/crates/memento-embed/: Cargo.toml
rust/crates/memento-embed/src/: lib.rs
rust/crates/memento-embed/tests/: protocol.rs
rust/crates/memento-ffi/: Cargo.toml
rust/crates/memento-ffi/include/: memento_ffi.h
rust/crates/memento-ffi/src/: lib.rs
rust/crates/memento-gte/: Cargo.toml
rust/crates/memento-gte/src/: lib.rs
rust/crates/memento-gte/tests/: parity.rs
rust/crates/memento-needle/: Cargo.toml
rust/crates/memento-needle-ffi/: Cargo.toml
rust/crates/memento-needle-ffi/include/: memento_needle_ffi.h
rust/crates/memento-needle-ffi/src/: lib.rs
rust/crates/memento-needle/src/: lib.rs
rust/crates/memento-needle/tests/: model.rs
rust/crates/memento-needle/tests/fixtures/: needle_sentencepiece_parity.json
rust/crates/memento-sqlite-vector/: Cargo.toml
rust/crates/memento-sqlite-vector/src/: lib.rs
rust/crates/memento-vector/: Cargo.toml
rust/crates/memento-vector/src/: lib.rs
rust/docs/: golden-generation.md
rust/tests/fixtures/: go_parity.json
rust/tests/scripts/: generate_golden.sh
sample-bundle/instances/: smith.md
sample-bundle/projects/: piclaw.md
src/memento/: __init__.py  answers.py  app.py  authz.py  backup.py  cli.py  config.py  envelopes.py  executor.py  ffi.py  logging.py  mcp_registry.py  metrics.py  model_clients.py  needle_ffi.py  router.py  semantic.py  server.py  service.py  skill_import.py  skill_packs.py  subprocess_embeddings.py
src/memento/control/: __init__.py  checkpoints.py  db.py  operations.py  proposals.py  scheduler.py  signals.py  skill_pack_proposals.py
src/memento/derived/: __init__.py  embeddings_worker.py  graph.py  index.py  search.py
src/memento/graph_debug/: __init__.py  diagnostics.py  export.py  http.py  layout.py  models.py  refresh.py  snapshot.py
src/memento/graph_debug/static/: api.js  app.css  app.js  graph-scene.js  index.html  layout-worker.js
src/memento/repository/: __init__.py  asset_migration.py  asset_packs.py  bundle.py  frontmatter.py  git.py  lease.py  links.py  paths.py  schema.py  skill_packs.py  transactions.py
tests/: test_asset_migration.py  test_asset_pack_repository.py  test_control_plane.py  test_derived_plane.py  test_graph_debug.py  test_graph_diagnostics.py  test_graph_export.py  test_graph_layout.py  test_graph_refresh.py  test_graph_snapshot.py  test_graph_vendor.py  test_load_harness.py  test_memory_answer.py  test_needle_corpus.py  test_needle_ffi.py  test_needle_router_generator.py  test_operations.py  test_package.py  test_proposal_assets.py  test_repository_core.py  test_router.py  test_semantic.py  test_semantic_deferred.py  test_service_mcp.py  test_skill_import.py  test_skill_pack_proposals.py  test_skill_pack_repository.py  test_skill_packs.py  test_subprocess_embeddings.py
tests/browser/: graph.spec.ts  screenshots.spec.ts
tools/: __init__.py  container_cpu_smoke.py  graph_fixture_server.ts  graph_performance.mjs  load_test.py  release_deploy.py  vendor_graph_libraries.ts
tools/experiments/needle/: convert_needle.py  generate_corpus.py  generate_router_v2.py
workitems/20-doing/: versioned-skill-packs.md
workitems/50-done/: versioned-skill-packs.md
