[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "memento"
version = "0.1.0"
description = "A deterministic shared-memory MCP service backed by Git Markdown."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Rui Carmo", email = "rui.carmo@gmail.com" }]
dependencies = [
    "markdown-it-py>=3,<4",
    "pydantic>=2.8,<3",
    "python-frontmatter>=1,<2",
    "ruamel.yaml>=0.18,<0.19",
]

[project.scripts]
memento = "memento.cli:main"
memento-serve = "memento.cli:main"

[project.optional-dependencies]
dev = [
    "mypy>=1.11",
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.9",
]
mcp = [
    "umcp==0.2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["memento"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
