[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "memento"
version = "0.3.0rc19"
description = "A deterministic shared-memory MCP service backed by Git Markdown."
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Rui Carmo", email = "rui.carmo@gmail.com" }]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "markdown-it-py>=3,<4",
    "pydantic>=2.8,<3",
    "python-frontmatter>=1,<2",
    "ruamel.yaml>=0.18,<0.19",
]

[project.scripts]
memento = "memento.cli:main"
memento-serve = "memento.cli:main"
memento-skill-import = "memento.skill_import:main"

[project.optional-dependencies]
dev = [
    "umcp @ git+https://github.com/rcarmo/umcp.git@b6ef9af55c93c7742e7bc64c9c9bba2c53527692",
    "mypy>=1.11",
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.9",
]
mcp = [
    "umcp @ git+https://github.com/rcarmo/umcp.git@b6ef9af55c93c7742e7bc64c9c9bba2c53527692",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"memento.graph_debug" = ["static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["memento"]
exclude = ["tools/experiments/needle/convert_needle.py"]

[[tool.mypy.overrides]]
module = ["aioumcp", "umcp_shared"]
ignore_missing_imports = true
follow_untyped_imports = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "UP046", "UP047"]

[tool.ruff.lint.per-file-ignores]
"tools/**/*.py" = ["E402"]
