[workspace]
members = [
  "crates/memento-vector",
  "crates/memento-gte",
  "crates/memento-embed",
  "crates/memento-sqlite-vector",
  "crates/memento-ffi",
  "crates/memento-needle",
  "crates/memento-needle-ffi",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Rui Carmo <rui.carmo@gmail.com>"]
repository = "https://example.invalid/memento"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
libc = "0.2"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
lto = true
codegen-units = 1
