[package]
name = "memento-embed"
version = "0.1.0"
edition = "2021"
license = "MIT"

authors = ["Rui Carmo <rui.carmo@gmail.com>"]
description = "Framed embedding protocol for Memento"

[dependencies]
memento-gte = { path = "../memento-gte" }
memento-vector = { path = "../memento-vector" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
