[package]
name = "memento-sqlite-vector"
version = "0.1.0"
edition = "2021"
license = "MIT"

authors = ["Rui Carmo <rui.carmo@gmail.com>"]
description = "Loadable SQLite vector extension for Memento"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
memento-vector = { path = "../memento-vector" }
libc.workspace = true

[lints]
workspace = true
